--- a/money.html
+++ b/money.html
@@ -12,7 +12,7 @@
 <body>
     
     <main>
-        <section class="bg-blue-200 mt-12 lg:w-3/4 mx-auto p-7">
+        <section class="bg-blue-200 mt-12 lg:w-3/4 mx-auto p-7 pb-24">
         <h3 class="text-4xl md:text-5xl font-bold text-violet-600 text-center my-12">Welcome to Money DashBoard</h3>
             <div class="md:flex justify-center gap-3 text-center">
                 <div class="mb-4 rounded-md py-8 bg-green-300 md:w-60 text-red-600 px-6">
